--- a/Android/Resources/layout/Main.axml
+++ b/Android/Resources/layout/Main.axml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:p1="http://schemas.android.com/apk/res/android"
+<ExpandableListView xmlns:p1="http://schemas.android.com/apk/res/android"
     p1:minWidth="25px"
     p1:minHeight="25px"
     p1:layout_width="match_parent"
