--- a/Android/Resources/layout/Main.axml
+++ b/Android/Resources/layout/Main.axml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ExpandableListView xmlns:p1="http://schemas.android.com/apk/res/android"
-    p1:minWidth="25px"
-    p1:minHeight="25px"
-    p1:layout_width="match_parent"
-    p1:layout_height="match_parent"
-    p1:id="@+id/listBattles" />
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+    <ExpandableListView
+        android:minWidth="25px"
+        android:minHeight="25px"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/listBattles" />
+</LinearLayout>
