--- a/Android/Resources/layout/Main.axml
+++ b/Android/Resources/layout/Main.axml
@@ -3,10 +3,13 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
+    <include
+        android:id="@+id/includeMainTitlebar"
+        layout="@layout/MainTitlebar" />
     <ExpandableListView
+        android:id="@+id/listBattles"
         android:minWidth="25px"
         android:minHeight="25px"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/listBattles" />
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
 </LinearLayout>
