--- a/Android/Resources/layout/SubTitlebar.axml
+++ b/Android/Resources/layout/SubTitlebar.axml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/SubTitlebar"
     style="@style/SubTitleBarStyle">
     <ImageView
@@ -37,4 +37,12 @@
         android:textColor="#ffff0019"
         android:paddingLeft="5dp"
         android:layout_gravity="center" />
-</LinearLayout>
+    <Button
+        android:id="@+id/btnReset"
+        android:text="@string/reset"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/red_button"
+        style="@style/button_reset_text"
+        android:layout_alignParentRight="true" />
+</RelativeLayout>
