--- a/Android/Resources/layout/BattleTitlebar.axml
+++ b/Android/Resources/layout/BattleTitlebar.axml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/SubTitlebar"
+    android:id="@+id/BattleTitlebar"
     style="@style/SubTitleBarStyle">
     <ImageView
         android:id="@+id/titleSubLbBack"
@@ -37,4 +37,12 @@
         android:textColor="#ffff0019"
         android:paddingLeft="5dp"
         android:layout_gravity="center" />
+    <Button
+        android:id="@+id/btnReset"
+        android:text="@string/reset"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/red_button"
+        style="@style/button_reset_text"
+        android:layout_alignParentRight="true" />
 </RelativeLayout>
