fire combat resolution

--- a/Android/Resources/layout/FireCombat.axml
+++ b/Android/Resources/layout/FireCombat.axml
@@ -262,7 +262,7 @@
                     android:clickable="true" />
                 <ImageView
                     android:id="@+id/imgFireDie3"
-                    android:src="@drawable/blackw1"
+                    android:src="@drawable/blue1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.15"
@@ -271,7 +271,7 @@
                     android:clickable="true" />
                 <ImageView
                     android:id="@+id/imgFireDie4"
-                    android:src="@drawable/blackr1"
+                    android:src="@drawable/blackw1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.15"
@@ -280,7 +280,7 @@
                     android:clickable="true" />
                 <ImageView
                     android:id="@+id/imgFireDie5"
-                    android:src="@drawable/blue1"
+                    android:src="@drawable/blackr1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.15"
@@ -318,16 +318,47 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight=".20"
-                    android:layout_toLeftOf="@+id/txtFireResults"
-                    android:id="@+id/lblFireResults" />
+                    android:id="@+id/lblFireResults"
+                    android:layout_gravity="center_vertical" />
                 <TextView
-                    android:text=""
-                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="2"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight=".75"
+                    android:layout_weight=".15"
                     android:layout_toRightOf="@+id/lblFireResults"
-                    android:id="@+id/txtFireResults" />
+                    android:id="@+id/txtFireResults"
+                    android:textStyle="bold"
+                    android:layout_gravity="center_vertical" />
+                <ImageView
+                    android:id="@+id/imgFireLeaderLossSide"
+                    android:src="@drawable/attacker"
+                    android:layout_width="0dp"
+                    android:layout_height="45dp"
+                    android:layout_weight="0.10"
+                    android:layout_toRightOf="@+id/txtFireResults"
+                    android:layout_gravity="center"
+                    android:fitsSystemWindows="true"
+                    android:scaleType="fitCenter"
+                    android:visibility="visible" />
+                <TextView
+                    android:text="Leg 5 hours"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".40"
+                    android:layout_toRightOf="@+id/imgFireLeaderLossSide"
+                    android:id="@+id/txtFireLeaderLoss"
+                    android:visibility="visible"
+                    android:layout_marginLeft="2dp"
+                    android:layout_gravity="center_vertical" />
+                <ImageView
+                    android:id="@+id/imgFireLeaderLoss"
+                    android:src="@drawable/tombstone"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.10"
+                    android:layout_toRightOf="@+id/txtFireLeaderLoss"
+                    android:layout_gravity="center"
+                    android:visibility="visible" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
